--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         </ul> -->
         <ul class="icons">
           <li>
-            <a href="#" class="icon brands fa-facebook-f"
-              ><span class="label">Facebook</span></a
+            <a href="http://linkedin.com/in/sanket-salunkhe-a000601a8" target="_blank" class="icon brands fa-linkedin"
+              ><span class="label">LinkedIn</span></a
             >
           </li>
           <li>
@@ -70,6 +70,11 @@
               target="_blank"
               class="icon brands fa-instagram"
               ><span class="label">Instagram</span></a
+            >
+          </li>
+          <li>
+            <a href="https://www.facebook.com/Phoenix-Techno-Industry-104875944994658/" target="_blank" class="icon brands fa-facebook-f"
+              ><span class="label">Facebook</span></a
             >
           </li>
         </ul>
