--- a/index.html
+++ b/index.html
@@ -124,11 +124,6 @@
             <a href="#" class="image fit"
               ><img src="./factoryshed.JPG" alt=""
             /></a>
-            <p>
-              Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-              mattis sagittis magna etiam.
-            </p>
             <ul class="actions special">
               <!-- <li><a href="#" class="button">Full Story</a></li> -->
             </ul>
@@ -140,17 +135,17 @@
 
               <!-- Image 2 start  -->
               <h2>
-                <a href="#">Factory Area</a>
+                <a href="#">Warehouse</a>
               </h2>
             </header>
             <a href="#" class="image fit"
               ><img src="./factory image.JPG" alt=""
             /></a>
-            <p>
+            <!-- <p>
               Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
               primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
               mattis sagittis magna etiam.
-            </p>
+            </p> -->
             <ul class="actions special">
               <!-- <li><a href="#" class="button">Full Story</a></li> -->
             </ul>
@@ -168,11 +163,11 @@
             <a href="#" class="image fit"
               ><img src="./industry.JPG" alt=""
             /></a>
-            <p>
+            <!-- <p>
               Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
               primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
               mattis sagittis magna etiam.
-            </p>
+            </p> -->
             <ul class="actions special">
               <!-- <li><a href="#" class="button">Full Story</a></li> -->
             </ul>
@@ -185,17 +180,17 @@
             <header>
               <!-- <span class="date">April 14, 2017</span> -->
               <h2>
-                <a href="#">Factory shed inner area</a>
+                <a href="#">15,000 sq.ft Godown</a>
               </h2>
             </header>
             <a href="#" class="image fit"
               ><img src="./innera rea.JPG" alt=""
             /></a>
-            <p>
+            <!-- <p>
               Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
               primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
               mattis sagittis magna etiam.
-            </p>
+            </p> -->
             <ul class="actions special">
               <!-- <li><a href="#" class="button">Full Story</a></li> -->
             </ul>
@@ -203,51 +198,40 @@
 
           <!-- Image 4 end  -->
 
-          <!-- <article>
+
+          <!-- Image 5 start  -->
+
+           <article>
             <header>
-              <span class="date">April 11, 2017</span>
+              <!-- <span class="date">April 11, 2017</span> -->
               <h2>
                 <a href="#"
-                  >Odio magna<br />
-                  sed consectetur</a
+                  >Godown</a
                 >
               </h2>
             </header>
             <a href="#" class="image fit"
-              ><img src="images/pic06.jpg" alt=""
+              ><img src="./godown.JPG" alt=""
             /></a>
-            <p>
-              Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-              mattis sagittis magna etiam.
-            </p>
-            <ul class="actions special">
-              <li><a href="#" class="button">Full Story</a></li>
-            </ul>
-          </article>
+          </article> 
+
+          <!-- Image 5 end -->
+
+          <!-- Image 6 start  -->
           <article>
             <header>
-              <span class="date">April 7, 2017</span>
+              <!-- <span class="date">April 7, 2017</span> -->
               <h2>
-                <a href="#"
-                  >Augue lorem<br />
-                  primis vestibulum</a
-                >
+                <a href="#">Pre-engineered (peb) building Inside view </a>
               </h2>
             </header>
             <a href="#" class="image fit"
-              ><img src="images/pic07.jpg" alt=""
+              ><img src="./peb.JPG" alt=""
             /></a>
-            <p>
-              Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-              mattis sagittis magna etiam.
-            </p>
-            <ul class="actions special">
-              <li><a href="#" class="button">Full Story</a></li>
-            </ul>
-          </article> -->
+          </article> 
         </section>
+
+        <!-- Image 6 end  -->
 
         <!-- Footer -->
         <!-- <footer>
