added images and logo

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </li>
         </ul>
       </nav>
-
+`
       <!-- Main -->
       <div id="main">
         <!-- Featured Post -->
@@ -93,9 +93,7 @@
               > -->
             </h2>
             <p>
-              Phoenix Techno Industry is a Sister Concerns of Mauli Engineering
-              Project, Mauli Engineering Project privately owned mechanical and
-              heavy engineering industry since 12 years. <br />
+              <br />
               We have a broad base of engineering staff including specialist
               Maintenance team, Fabrication team, Manufacture team, Structure
               fabrication team and Erection team and other staff. <br />We
@@ -103,9 +101,9 @@
               management and engineering operations.
             </p>
           </header>
-          <!-- <a href="#" class="image main"
-            ><img src="images/pic01.jpg" alt=""
-          /></a> -->
+          <a href="#" class="image main"
+            ><img src="./logoimage.JPEG" alt=""
+          /></a>
           <!-- <ul class="actions special">
             <li><a href="#" class="button large">Full Story</a></li>
           </ul> -->
@@ -211,7 +209,7 @@
               </h2>
             </header>
             <a href="#" class="image fit"
-              ><img src="./godown.JPG" alt=""
+              ><img src="./gd.jpeg" alt=""
             /></a>
           </article> 
 
