moew images added

--- a/index.html
+++ b/index.html
@@ -227,9 +227,71 @@
               ><img src="./peb.JPG" alt=""
             /></a>
           </article> 
+           <!-- Image 6 end  -->
+
+          <!-- Image 7 start  -->
+          <article>
+            <header>
+              <!-- <span class="date">April 7, 2017</span> -->
+              <h2>
+                <a href="#">Sheet making Machine </a>
+              </h2>
+            </header>
+            <a href="#" class="image fit"
+              ><img src="./Sheet_machine.jpeg" alt=""
+            /></a>
+          </article> 
+
+          <!-- Image 7 end -->
+
+           <!-- Image 8 start  -->
+          <article>
+            <header>
+              <!-- <span class="date">April 7, 2017</span> -->
+              <h2>
+                <a href="#">Colored sheets</a>
+              </h2>
+            </header>
+            <a href="#" class="image fit"
+              ><img src="./color1.jpeg" alt=""
+            /></a>
+          </article> 
+
+          <!-- Image 8 end -->
+
+          <!-- Image 9 start  -->
+          <article>
+            <header>
+              <!-- <span class="date">April 7, 2017</span> -->
+              <h2>
+                <a href="#">Colored sheets</a>
+              </h2>
+            </header>
+            <a href="#" class="image fit"
+              ><img src="./color2.jpeg" alt=""
+            /></a>
+          </article> 
+
+          <!-- Image 9 end -->
+
+          <!-- Image 10 start  -->
+          <article>
+            <header>
+              <!-- <span class="date">April 7, 2017</span> -->
+              <h2>
+                <a href="#">Plain Colored sheet</a>
+              </h2>
+            </header>
+            <a href="#" class="image fit"
+              ><img src="./plain.jpeg" alt=""
+            /></a>
+          </article> 
+
+            <!-- Image 10 start  -->
+
         </section>
 
-        <!-- Image 6 end  -->
+       
 
         <!-- Footer -->
         <!-- <footer>
